formulary, test label and association with an input

--- a/Formul1.html
+++ b/Formul1.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+<html>
 <head></head>
-<body ></body>
+<body>
 <form method= "get" action="">
     <p>
-        <label for=""></label>
+        <label for="number of questions">Number of questions you want to answer</label> : <input type="number" name="number of questions">
     </p>
 </form>
+</body>
+</html>
