adding  and testing checkboxes

--- a/Formul1.html
+++ b/Formul1.html
@@ -4,7 +4,10 @@
 <body>
 <form method= "get" action="">
     <p>
-        <label for="number of questions">Number of questions you want to answer</label> : <input type="number" name="number of questions">
+        <label for="try number">try number</label> : <input type="number" name="try number" id="try number"><br>
+        Try checkbox:<br>
+        <label for="try checkbox1">trycheckbox1</label> : <input type="checkbox" name="try checkbox1" id="try checkbox1"><br>
+        <label for="try checkbox2">trycheckbox2</label> : <input type="checkbox" name="try checkbox2" id="try checkbox2"><br>
     </p>
 </form>
 </body>
