testing fieldset and two legends on the same fieldset

--- a/Formul1.html
+++ b/Formul1.html
@@ -4,10 +4,14 @@
 <body>
 <form method= "get" action="">
     <p>
-        <label for="try number">try number</label> : <input type="number" name="try number" id="try number"><br>
-        Try checkbox:<br>
-        <label for="try checkbox1">trycheckbox1</label> : <input type="checkbox" name="try checkbox1" id="try checkbox1"><br>
-        <label for="try checkbox2">trycheckbox2</label> : <input type="checkbox" name="try checkbox2" id="try checkbox2"><br>
+        <fieldset>
+            <legend>How to try formulary filled with numbers</legend>
+            <label for="try number">try number</label> : <input type="number" name="try number" id="try number"><br>
+            <legend> How to try a formulary filled with checkboxes</legend>
+            Try checkbox:<br>
+            <label for="try checkbox1">trycheckbox1</label> : <input type="checkbox" name="try checkbox1" id="try checkbox1"><br>
+            <label for="try checkbox2">trycheckbox2</label> : <input type="checkbox" name="try checkbox2" id="try checkbox2"><br>
+        </fieldset>
     </p>
 </form>
 </body>
