two fieldsets two legends for better lisibility

--- a/Formul1.html
+++ b/Formul1.html
@@ -7,6 +7,8 @@
         <fieldset>
             <legend>How to try formulary filled with numbers</legend>
             <label for="try number">try number</label> : <input type="number" name="try number" id="try number"><br>
+        </fieldset>
+        <fieldset>
             <legend> How to try a formulary filled with checkboxes</legend>
             Try checkbox:<br>
             <label for="try checkbox1">trycheckbox1</label> : <input type="checkbox" name="try checkbox1" id="try checkbox1"><br>
