adding send button, autofocusn required and a style for required

--- a/Formul1.html
+++ b/Formul1.html
@@ -7,7 +7,7 @@
     <p>
         <fieldset>
             <legend>How to try formulary filled with numbers</legend>
-            <label for="try number">try number</label> : <input type="number" name="try number" id="try number"><br>
+            <label for="try number">try number</label> : <input type="number" name="try number" id="try number" autofocus required><br>
         </fieldset>
         <fieldset>
             <legend> How to try a formulary filled with checkboxes</legend>
@@ -16,6 +16,7 @@
             <label for="try checkbox2">trycheckbox2</label> : <input type="checkbox" name="try checkbox2" id="try checkbox2"><br>
         </fieldset>
     </p>
+    <input type="submit" value="SEND">
 </form>
 </body>
 </html>
