--- a/Formul1.html
+++ b/Formul1.html
@@ -14,8 +14,24 @@
             Try checkbox:<br>
             <label for="try checkbox1">trycheckbox1</label> : <input type="checkbox" name="try checkbox1" id="try checkbox1"><br>
             <label for="try checkbox2">trycheckbox2</label> : <input type="checkbox" name="try checkbox2" id="try checkbox2"><br>
-        </fieldset>
+        </fieldset>       
     </p>
+    <p>
+        <label for="pays">Dans quel pays habitez-vous ?</label><br>
+        <select name="pays" id="pays">
+          <option value="espagne">Espagne</option>
+          <option value="royaume-uni">Royaume-Uni</option>
+          <option value="canada" selected>Canada</option>
+          <option value="japon">Japon</option>
+        </select>
+      </p>
+      <p>
+        Veuillez indiquer la tranche d'âge dans laquelle vous vous situez :<br>
+        <input type="radio" name="age" value="moins15" id="moins15"> <label for="moins15">Moins de 15 ans</label><br>
+        <input type="radio" name="age" value="medium15-25" id="medium15-25"> <label for="medium15-25">15-25 ans</label><br>
+        <input type="radio" name="age" value="medium25-40" id="medium25-40"> <label for="medium25-40">25-40 ans</label><br>
+        <input type="radio" name="age" value="plus40" id="plus40"> <label for="plus40">Plus de 40 ans</label>
+      </p>
     <input type="submit" value="SEND">
 </form>
 </body>
